--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
-    "next": "15.0.1",
+    "next": "^15.3.4",
     "postcss": "8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
